--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,9 +20,15 @@
     "@testing-library/jest-dom": "6.1.5",
     "@testing-library/react": "14.1.2",
     "@types/jest": "29.5.11",
+    "@types/luxon": "^3.4.2",
     "@types/react": "18.2.45",
+    "autoprefixer": "^10.4.19",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "luxon": "^3.4.4",
+    "postcss": "^8.4.39",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.3.3"
   }
 }
