--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "luxon": "^3.4.4",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.4",
     "typescript": "5.3.3"
   }
